// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addLiveOrder 1`] = `
Array [
  Array [
    Object {
      "Item": Object {
        "account": Object {
          "S": "0xAccount",
        },
        "amount": Object {
          "N": "456",
        },
        "balance": Object {
          "N": "123",
        },
        "createdAt": Object {
          "N": "1111111111",
        },
        "currentSequence": Object {
          "N": "1",
        },
        "expiry": Object {
          "N": "1234567890",
        },
        "fee": Object {
          "N": "1",
        },
        "feeAsset": Object {
          "S": "feeAsset",
        },
        "fill": Object {
          "N": "234",
        },
        "initialSequence": Object {
          "N": "1",
        },
        "orderHash": Object {
          "S": "0xOrderHash",
        },
        "pair": Object {
          "S": "code1|code2",
        },
        "price": Object {
          "N": "0.12345678",
        },
        "side": Object {
          "S": "bid",
        },
        "updatedAt": Object {
          "N": "1234567890",
        },
      },
      "TableName": "israfel.liveOrders.dev",
    },
  ],
]
`;

exports[`addRawOrder 1`] = `
Array [
  Array [
    Object {
      "Item": Object {
        "createdAt": Object {
          "N": "1234567890",
        },
        "exchangeAddress": Object {
          "S": "exchangeAddress",
        },
        "expirationTimeSeconds": Object {
          "S": "1234567890",
        },
        "feeRecipientAddress": Object {
          "S": "feeRecipientAddress",
        },
        "makerAddress": Object {
          "S": "makerAddress",
        },
        "makerAssetAmount": Object {
          "S": "123",
        },
        "makerAssetData": Object {
          "S": "makerAssetData",
        },
        "makerFee": Object {
          "S": "0",
        },
        "orderHash": Object {
          "S": "0xOrderHash",
        },
        "pair": Object {
          "S": "code1|code2",
        },
        "salt": Object {
          "S": "789",
        },
        "senderAddress": Object {
          "S": "senderAddress",
        },
        "signature": Object {
          "S": "signature",
        },
        "takerAddress": Object {
          "S": "takerAddress",
        },
        "takerAssetAmount": Object {
          "S": "456",
        },
        "takerAssetData": Object {
          "S": "takerAssetData",
        },
        "takerFee": Object {
          "S": "0",
        },
        "updatedAt": Object {
          "N": "1234567890",
        },
      },
      "TableName": "israfel.rawOrders.dev",
    },
  ],
]
`;

exports[`addUserOrder 1`] = `
Array [
  Array [
    Object {
      "Item": Object {
        "accountYearMonth": Object {
          "S": "0xAccount|1970-01",
        },
        "amount": Object {
          "N": "456",
        },
        "balance": Object {
          "N": "123",
        },
        "createdAt": Object {
          "N": "1234560000",
        },
        "expiry": Object {
          "N": "1234567890",
        },
        "fee": Object {
          "N": "1",
        },
        "feeAsset": Object {
          "S": "feeAsset",
        },
        "fill": Object {
          "N": "234",
        },
        "initialSequence": Object {
          "N": "1",
        },
        "pairOrderHashSequenceStatus": Object {
          "S": "code1|code2|0xOrderHash|2|status",
        },
        "price": Object {
          "N": "0.12345678",
        },
        "processed": Object {
          "BOOL": false,
        },
        "side": Object {
          "S": "side",
        },
        "type": Object {
          "S": "type",
        },
        "updatedAt": Object {
          "N": "1234567890",
        },
        "updatedBy": Object {
          "S": "updatedBy",
        },
      },
      "TableName": "israfel.userOrders.dev",
    },
  ],
]
`;

exports[`deleteLiveOrder 1`] = `
Array [
  Array [
    Object {
      "Key": Object {
        "orderHash": Object {
          "S": "0xOrderHash",
        },
        "pair": Object {
          "S": "code1|code2",
        },
      },
      "TableName": "israfel.liveOrders.dev",
    },
  ],
]
`;

exports[`deleteRawOrderSignature 1`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeValues": Object {
        ":updatedAt": Object {
          "N": "1234567890",
        },
      },
      "Key": Object {
        "orderHash": Object {
          "S": "0xOrderHash",
        },
      },
      "TableName": "israfel.rawOrders.dev",
      "UpdateExpression": "SET updatedAt = :updatedAt REMOVE signature",
    },
  ],
]
`;

exports[`getLiveOrders 1`] = `Array []`;

exports[`getLiveOrders 2`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeValues": Object {
        ":pair": Object {
          "S": "code1|code2",
        },
      },
      "KeyConditionExpression": "pair = :pair",
      "TableName": "israfel.liveOrders.dev",
    },
  ],
]
`;

exports[`getLiveOrders 3`] = `
Array [
  Object {
    "account": "0xAccount",
    "amount": 456,
    "balance": 123,
    "createdAt": 1234560000,
    "currentSequence": 2,
    "expiry": 1234567890,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 234,
    "initialSequence": 1,
    "orderHash": "0xOrderHash",
    "pair": "code1|code2",
    "price": 123,
    "side": "side",
    "updatedAt": 1234567890,
  },
]
`;

exports[`getLiveOrders with orderHash 1`] = `Array []`;

exports[`getLiveOrders with orderHash 2`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeValues": Object {
        ":orderHash": Object {
          "S": "orderHash",
        },
        ":pair": Object {
          "S": "code1|code2",
        },
      },
      "KeyConditionExpression": "pair = :pair AND orderHash = :orderHash",
      "TableName": "israfel.liveOrders.dev",
    },
  ],
]
`;

exports[`getLiveOrders with orderHash 3`] = `
Array [
  Object {
    "account": "0xAccount",
    "amount": 456,
    "balance": 123,
    "createdAt": 1234560000,
    "currentSequence": 2,
    "expiry": 1234567890,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 234,
    "initialSequence": 1,
    "orderHash": "0xOrderHash",
    "pair": "code1|code2",
    "price": 123,
    "side": "side",
    "updatedAt": 1234567890,
  },
]
`;

exports[`getLiveOrders with orderHash 4`] = `[Error: multiple record for order hash orderHash]`;

exports[`getRawOrder 1`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeValues": Object {
        ":orderHash": Object {
          "S": "0xOrderHash",
        },
      },
      "KeyConditionExpression": "orderHash = :orderHash",
      "TableName": "israfel.rawOrders.dev",
    },
  ],
]
`;

exports[`getRawOrder 2`] = `
Object {
  "createdAt": 1234567890,
  "orderHash": "0xOrderHash",
  "pair": "code1|code2",
  "signedOrder": Object {
    "exchangeAddress": "exchangeAddress",
    "expirationTimeSeconds": "1234567890",
    "feeRecipientAddress": "feeRecipientAddress",
    "makerAddress": "makerAddress",
    "makerAssetAmount": "123",
    "makerAssetData": "makerAssetData",
    "makerFee": "0",
    "salt": "789",
    "senderAddress": "senderAddress",
    "signature": "signature",
    "takerAddress": "takerAddress",
    "takerAssetAmount": "456",
    "takerAssetData": "takerAssetData",
    "takerFee": "0",
  },
  "updatedAt": 1234567890,
}
`;

exports[`getRawOrder 3`] = `
Object {
  "createdAt": 1234567890,
  "orderHash": "0xOrderHash",
  "pair": "code1|code2",
  "signedOrder": Object {
    "exchangeAddress": "exchangeAddress",
    "expirationTimeSeconds": "1234567890",
    "feeRecipientAddress": "feeRecipientAddress",
    "makerAddress": "makerAddress",
    "makerAssetAmount": "123",
    "makerAssetData": "makerAssetData",
    "makerFee": "0",
    "salt": "789",
    "senderAddress": "senderAddress",
    "signature": "",
    "takerAddress": "takerAddress",
    "takerAssetAmount": "456",
    "takerAssetData": "takerAssetData",
    "takerFee": "0",
  },
  "updatedAt": 1234567890,
}
`;

exports[`getRawOrder 4`] = `[Error: multiple record for order hash 0xOrderHash]`;

exports[`getUserOrders 1`] = `
Array [
  Array [
    "0xAccount",
    "1970-01",
    "",
  ],
  Array [
    "0xAccount",
    "1970-02",
    "",
  ],
  Array [
    "0xAccount",
    "1970-03",
    "",
  ],
  Array [
    "0xAccount",
    "1970-04",
    "",
  ],
]
`;

exports[`getUserOrdersForMonth 1`] = `Array []`;

exports[`getUserOrdersForMonth 2`] = `
Array [
  Object {
    "account": "0xAccount",
    "amount": 456,
    "balance": 123,
    "createdAt": 1234560000,
    "currentSequence": 1,
    "expiry": 1234567890,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 234,
    "initialSequence": 1,
    "orderHash": "0xOrderHash",
    "pair": "code1|code2",
    "price": 123,
    "processed": true,
    "side": "side",
    "status": "status",
    "type": "type",
    "updatedAt": 1234567890,
    "updatedBy": "updatedBy",
  },
]
`;

exports[`getUserOrdersForMonth 3`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeValues": Object {
        ":accountYearMonth": Object {
          "S": "0xAccount|1234-56",
        },
        ":end": Object {
          "S": "code1|code2|z",
        },
        ":start": Object {
          "S": "code1|code2|",
        },
      },
      "KeyConditionExpression": "accountYearMonth = :accountYearMonth AND pairOrderHashSequenceStatus BETWEEN :start AND :end",
      "TableName": "israfel.userOrders.dev",
    },
  ],
]
`;

exports[`scanStatus 1`] = `Array []`;

exports[`scanStatus 2`] = `
Array [
  Array [
    Object {
      "TableName": "israfel.status.dev",
    },
  ],
]
`;

exports[`scanStatus 3`] = `
Array [
  Object {
    "count": 123,
    "hostname": "hostname",
    "pair": "code1|code2",
    "tool": "tool",
    "updatedAt": 1234567890,
  },
  Object {
    "hostname": "hostname",
    "pair": "tool",
    "tool": "tool",
    "updatedAt": 1234567890,
  },
]
`;

exports[`scanTokens 1`] = `Array []`;

exports[`scanTokens 2`] = `
Array [
  Array [
    Object {
      "TableName": "israfel.tokens.dev",
    },
  ],
]
`;

exports[`scanTokens 3`] = `
Array [
  Object {
    "address": "addr1",
    "code": "code1",
    "custodian": "custodian1",
    "denomination": 1,
    "feeSchedules": Object {
      "WETH": Object {
        "minimum": 1,
        "rate": 0,
      },
    },
    "precisions": Object {
      "WETH": 0.000005,
    },
  },
  Object {
    "address": "addr2",
    "code": "code2",
    "custodian": "custodian2",
    "denomination": 10,
    "feeSchedules": Object {
      "WETH": Object {
        "asset": "asset",
        "minimum": 1,
        "rate": 0,
      },
    },
    "maturity": 1234567890,
    "precisions": Object {
      "WETH": 0.000005,
    },
  },
]
`;

exports[`updateLiveOrder 1`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeValues": Object {
        ":balance": Object {
          "N": "123",
        },
        ":currentSequence": Object {
          "N": "2",
        },
        ":fill": Object {
          "N": "234",
        },
        ":updatedAt": Object {
          "N": "1234567890",
        },
      },
      "Key": Object {
        "orderHash": Object {
          "S": "0xOrderHash",
        },
        "pair": Object {
          "S": "code1|code2",
        },
      },
      "TableName": "israfel.liveOrders.dev",
      "UpdateExpression": "SET balance = :balance, fill = :fill, updatedAt = :updatedAt, currentSequence = :currentSequence ",
    },
  ],
]
`;

exports[`updateStatus 1`] = `
Array [
  Array [
    Object {
      "Item": Object {
        "hostname": Object {
          "S": "hostname",
        },
        "process": Object {
          "S": "tool|someProcess|hostname",
        },
        "updatedAt": Object {
          "N": "1234567890",
        },
      },
      "TableName": "israfel.status.dev",
    },
  ],
  Array [
    Object {
      "Item": Object {
        "count": Object {
          "N": "123",
        },
        "hostname": Object {
          "S": "hostname",
        },
        "process": Object {
          "S": "tool|someProcess|hostname",
        },
        "updatedAt": Object {
          "N": "1234567890",
        },
      },
      "TableName": "israfel.status.dev",
    },
  ],
]
`;
